fixed spacing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@
 
 #best-jokes {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
     text-align: left;
+    padding-top: 35px;
 }
 
 #songInput {
